--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
-<title>{% block title %}{% trans "$(name)" %}{% endblock %}</title>
+<title>{% block title %}django-starter project{% endblock %}</title>
 
 <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />
 <meta name="robots" content="index, follow" />
