--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -24,7 +24,7 @@
   <!-- Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <link rel="shortcut icon" type="image/x-icon" href="{% media_url 'favicon.ico' %}">
+  <link rel="shortcut icon" type="image/x-icon" href="{{ STATIC_URL }}favicon.ico">
 
   <!-- CSS: implied media=all -->
   <!-- CSS concatenated and minified via ant build script-->
